updated styles t prevent event cards from being squished

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ p {
   border: 2px solid #bdbaba !important;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
   transition: all 0.3s ease-in-out;
+  margin: 10px 10px;
 }
 
 .event-card:hover {
@@ -159,6 +160,25 @@ p {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .event-card {
+    max-width: 90%;
+    margin: 10px auto;
+  }
+
+  .event-card .card-header {
+    font-size: 16px;
+  }
+
+  .event-card .card-body {
+    padding: 10px;
+  }
+
+  .event-card .event-btn {
+    font-size: 14px;
   }
 }
 
